# photoroom-assignment

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  clippy.toml  deny.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  tsconfig.json  typos.toml
.cargo/: config.toml
.claude/: settings.json
.config/: nextest.toml
.zed/: settings.json
scripts/: clean-rustup.ts  copy-addon.ts  fd-lock.d.ts  setup-zed.ts  test-nextest.ts
scripts/helpers/: run-command.ts  run-script.ts
